--- a/views/options.html
+++ b/views/options.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<h2>Réglage des notifications</h2>
+<h1>Réglage des notifications</h1>
 
 <div class="row">
     <label class="form-switch">
@@ -40,8 +40,10 @@
 
 <div id="displayDevMode">
     <hr>
-    <button type="button" id="testSound">Test de son</button>
-    <button id="testNotify">Test de Notification</button>
+    <div class="row footer">
+        <button type="button" class="btn btn-danger" id="testSound">Test de son</button>
+        <button type="button" class="btn btn-danger" id="testNotify">Test de Notification</button>
+    </div>
 </div>
 
 </body>
