--- a/views/options/options.html
+++ b/views/options/options.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="options.css">
 
-    <script src="/assets/js/jquery.js"></script>
+    <script src="/assets/js/jquery-3.4.1.min.js"></script>
     <script src="/init.js"></script>
     <script src="/app.js"></script>
     <script src="options.js"></script>
@@ -46,8 +46,8 @@
     </div>
 
     <div class="row">
-        <p class="left" >Développer par <a id="devName" href="http://devleeschauwer.fr">devleesch</a></p>
-        <a href="https://chrome.google.com/webstore/detail/squntt-live/hgfbkbnbhlidmkcmbfhmlhhpiheloafk"><p class="right" id="version"></p></a>
+        <p class="left" >Développer par <a id="devName" href="https://github.com/devleesch001/">devleesch</a></p>
+        <a href="https://github.com/devleesch001/Squntt-Live-Notif/"><p class="right" id="version"></p></a>
     </div>
 
 </div>
