--- a/views/popup/popup.html
+++ b/views/popup/popup.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <head>
-    <script src="/assets/js/jquery.js"></script>
-    <script src="/init.js"></script>
-    <script src="/app.js"></script>
+    <script src="../../assets/js/jquery-3.4.1.min.js"></script>
+    <script src="../../init.js"></script>
+    <script src="../../app.js"></script>
     <script src="popup.js"></script>
 
     <link rel="stylesheet" href="popup.css">
-    <link rel="stylesheet" href="/assets/css/all.css">
-
-    <!--    <link rel="stylesheet" href="../assets/css/brands.css">-->
-    <!--    <link rel="stylesheet" href="../assets/css/fontawesome.css">-->
-    <!--    <link rel="stylesheet" href="../assets/css/regular.css">-->
-    <!--    <link rel="stylesheet" href="../assets/css/solid.css">-->
+    <link rel="stylesheet" href="../../assets/css/all.css">
 
 </head>
 <html>
@@ -22,8 +17,8 @@
     <span class="streamer">Squntt_<!-- js replace name of streamer --></span>
 </div>
 
-<span class="settings fa-stack">
-    <i id="scir" class="fa fa-circle fa-stack-2x" style="padding-left: 0px;"></i>
+<span class="settings">
+    <i id="scir" class="fa fa-circle fa-stack-2x"></i>
     <i id="scog" class="fa fa-cog fa-stack-1x"></i>
 
 </span>
