change css local with distant css for FontAwesome version 0.9.5.3

--- a/views/popup/popup.html
+++ b/views/popup/popup.html
@@ -6,10 +6,11 @@
     <script src="popup.js"></script>
 
     <link rel="stylesheet" href="popup.css">
-    <link rel="stylesheet" href="../../assets/css/all.css">
+    <script src="https://kit.fontawesome.com/3b799cee9e.js" crossorigin="anonymous"></script>
+    <title>Squntt_ Live</title>
 
 </head>
-<html>
+<html lang="fr-fr">
 
 <body>
 
